# Prompt-Based-Zero-Shot-Learning-Analysis-of-LLM

./: .gitignore  README.md  get_results.py  main.py  pyproject.toml
app/: constants.py  get_results.py  inference.py  main.py  options.py
