[tool.poetry]
name = "analysis_LLM"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.8.0"
requests = "^2.27.1"
click= "8.0.4"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
